# Logger

./: .gitignore  CMakeLists.txt  README.md
include/: logger.h
tests/: logger_test.cpp
